--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
-    "name": "js-projects",
-    "version": "1.0.0",
-    "description": "JavaScript learning projects with unit tests",
-    "main": "index.js",
-    "scripts": {
-      "test": "jest",
-      "test:watch": "jest --watch",
-      "test:coverage": "jest --coverage"
-    },
-    "devDependencies": {
-      "jest": "^29.0.0",
-      "eslint": "^8.0.0"
-    },
-    "jest": {
-      "testEnvironment": "node",
-      "collectCoverageFrom": [
-        "src/**/*.js"
-      ]
-    }
+  "name": "js-projects",
+  "version": "1.0.0",
+  "scripts": {
+    "test": "jest",
+    "test:unit": "jest",
+    "test:e2e": "playwright test",
+    "test:e2e:basketball": "playwright test --project=basketball-reference-chromium",
+    "test:e2e:basketball-all": "playwright test tests/e2e/Basketball-Reference",
+    "test:e2e:mobile": "playwright test --project=basketball-reference-mobile",
+    "test:e2e:headed": "playwright test --headed tests/e2e/Basketball-Reference",
+    "test:e2e:debug": "playwright test --debug tests/e2e/Basketball-Reference",
+    "test:all": "npm run test:unit && npm run test:e2e:basketball"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.52.0",
+    "jest": "^29.0.0"
   }
+}
