--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "scripts": {
     "test": "jest",
     "test:unit": "jest",
-    "test:e2e": "playwright test",
-    "test:e2e:basketball": "playwright test --project=basketball-reference-chromium",
-    "test:e2e:basketball-all": "playwright test tests/e2e/Basketball-Reference",
-    "test:e2e:mobile": "playwright test --project=basketball-reference-mobile",
-    "test:e2e:headed": "playwright test --headed tests/e2e/Basketball-Reference",
-    "test:e2e:debug": "playwright test --debug tests/e2e/Basketball-Reference",
-    "test:all": "npm run test:unit && npm run test:e2e:basketball"
+    "test:unit:coverage": "jest --coverage",
+    "test:e2e": "npx playwright test",
+    "test:e2e:basketball": "npx playwright test --project=basketball-reference-chromium",
+    "test:e2e:basketball-all": "npx playwright test tests/e2e/Basketball-Reference",
+    "test:all": "npm run test:unit && npm run test:e2e:basketball",
+    "lint": "eslint src/ tests/ --ext .js",
+    "lint:fix": "eslint src/ tests/ --ext .js --fix"
   },
   "devDependencies": {
-    "@playwright/test": "^1.52.0",
-    "jest": "^29.0.0"
+    "jest": "^29.0.0",
+    "@playwright/test": "^1.40.0",
+    "eslint": "^8.0.0"
   }
 }
