--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "test": "jest",
     "test:unit": "jest",
     "test:unit:coverage": "jest --coverage",
+    "test:unit:watch": "jest --watch",
     "test:e2e": "npx playwright test",
     "test:e2e:basketball": "npx playwright test --project=basketball-reference-chromium",
     "test:e2e:basketball-all": "npx playwright test tests/e2e/Basketball-Reference",
@@ -13,8 +14,8 @@
     "lint:fix": "eslint src/ tests/ --ext .js --fix"
   },
   "devDependencies": {
-    "jest": "^29.0.0",
     "@playwright/test": "^1.40.0",
-    "eslint": "^8.0.0"
+    "eslint": "^8.57.1",
+    "jest": "^29.0.0"
   }
 }
