--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
       run: npx playwright install --with-deps
       
     - name: Run Playwright tests
-      run: npm run test:e2e:basketball
+      run: npm run test:e2e:basketball-all
       
     - name: Upload Playwright report
       uses: actions/upload-artifact@v4
@@ -62,14 +62,6 @@ jobs:
       with:
         name: playwright-report
         path: playwright-report/
-        retention-days: 30
-        
-    - name: Upload test results
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: test-results
-        path: test-results/
         retention-days: 30
 
   lint:
@@ -90,4 +82,3 @@ jobs:
       
     - name: Run ESLint
       run: npm run lint
-      continue-on-error: true
