--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: 18
+        cache: 'npm'
         
     - name: Install dependencies
       run: npm ci
@@ -46,6 +47,7 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: 18
+        cache: 'npm'
         
     - name: Install dependencies
       run: npm ci
@@ -76,6 +78,7 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: 18
+        cache: 'npm'
         
     - name: Install dependencies
       run: npm ci
