--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,11 +5,24 @@ on:
     branches: [ main, develop ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
+    inputs:
+      test_type:
+        description: 'Type of tests to run'
+        required: true
+        default: 'all'
+        type: choice
+        options:
+        - all
+        - unit
+        - e2e
+        - lint
 
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
     name: Unit Tests (Jest)
+    if: github.event.inputs.test_type == 'all' || github.event.inputs.test_type == 'unit' || github.event_name != 'workflow_dispatch'
     
     steps:
     - name: Checkout code
@@ -38,6 +51,7 @@ jobs:
   e2e-tests:
     runs-on: ubuntu-latest
     name: E2E Tests (Playwright)
+    if: github.event.inputs.test_type == 'all' || github.event.inputs.test_type == 'e2e' || github.event_name != 'workflow_dispatch'
     
     steps:
     - name: Checkout code
@@ -69,6 +83,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     name: Code Quality (Linting)
+    if: github.event.inputs.test_type == 'all' || github.event.inputs.test_type == 'lint' || github.event_name != 'workflow_dispatch'
     
     steps:
     - name: Checkout code
