--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
       run: npx playwright install --with-deps
       
     - name: Run Playwright tests
-      run: npm run test:e2e:basketball-all
+      run: npm run test:e2e
       
     - name: Upload Playwright report
       uses: actions/upload-artifact@v4
