--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
   "devDependencies": {
     "@playwright/test": "^1.40.0",
     "eslint": "^8.57.1",
-    "jest": "^29.0.0"
+    "jest": "^29.0.0",
+    "rimraf": "^5.0.10"
+  },
+  "dependencies": {
+    "better-sqlite3": "^12.2.0",
+    "dotenv": "^17.0.1",
+    "mysql2": "^3.14.1",
+    "pg": "^8.16.3"
   }
 }
